--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,17 +1,39 @@
-html, body, #map-canvas {
-        height: 100%;
-        margin: 0px;
-        padding: 0px
-      }
+html, body {
+		height: 100%;
+		margin: 0px;
+		padding: 0px
+           }
 #route-finder {
-position: absolute;
-top: 5px;
-left: 50%;
-margin-left: -180px;
-z-index: 5;
-background-color: #fff;
-padding: 5px;
-border: 1px solid #999;
-opacity:0.7;
-filter:alpha(opacity=70);
-}
+		position: absolute;
+		top: 5px;
+		width: 30%;
+		height: 100%;
+		float:left;
+		background-color: #fff;
+		padding: 5px;
+		border: 1px solid #999;
+		background-image:url('../images/compass.jpeg');
+	      }
+
+#map-canvas {
+		height: 100%;
+		margin: 0px;
+		padding: 0px;
+		width:70%;
+		margin-left:30%
+	    }
+
+#startaddr {
+		margin-left: 5px;
+		width: 400px;
+	   }
+
+#destaddr {
+		margin-left: 19px;
+		vertical-align:top;
+		width:400px;
+	  }
+
+#submit {
+		font-weight: bold;
+	}	
