--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -29,7 +29,7 @@ html, body {
 		width: 281px;
 	   }
 
-#destaddr {
+#destaddr,#dest {
 		margin-left: 19px;
 		vertical-align:top;
 		width:281px;
@@ -38,3 +38,8 @@ html, body {
 #submit {
 		font-weight: bold;
 	}	
+
+#computed-route {
+			display: none;
+			vertical-align: top;
+		}
