Added code to update addresses on clicking Submit button

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -56,12 +56,16 @@ input:-moz-placeholder {
 #startaddr    {
 		margin-left: 19px;
 		width: 281px;
+		font-family: 'Arial';
+		font-size: 13px;
 	      }
 
 #destaddr,#dest {
 		margin-left: 19px;
 		vertical-align:top;
 		width:281px;
+		font-family: 'Arial';
+		font-size: 13px;
 	      }
 
 #submit       {
