--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -45,8 +45,7 @@ input:-moz-placeholder {
 		width: 366px;
 		height: 99.7%;
 		float:left;
-		background-color: #fff;
-		background-image:url('../images/background1.jpg');
+		background-color: white;
 		display:block;
 		border: 1px solid grey;
 	      }
