--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -43,15 +43,16 @@ input:-moz-placeholder {
 #route-finder {
 		position: absolute;
 		width: 366px;
-		height: 99.7%;
+		height: 99.5%;
 		float:left;
 		background-color: white;
 		display:block;
-		border: 1px solid grey;
 	      }
 
 #content      {
 		line-height: 25px;
+		width: 100%;
+		height: 95%;
 	      }
 
 #map-canvas   {
@@ -95,7 +96,7 @@ input:-moz-placeholder {
 	      }	
 
 #directions-panel {
-		height: 230px;
+		height: 650px;
 	        width: 320px;
 	        overflow: auto;
 		margin-left: 0px;
